# cpp-kickstarter

./: .gitignore  CMakeLists.txt  main.cpp  main_lib.cpp  test.c  test.cpp
Munit/: CMakeLists.txt
MyLibrary/: CMakeLists.txt  MyLibrary.c  MyLibrary.h
src/: CMakeLists.txt  lib.cpp  main.cpp  main_lib.cpp  main_lib.h
src/mylibrary/: CMakeLists.txt  mylibrary.cpp
test/: CMakeLists.txt
